--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,80 @@
-# # Copyright (c) 2019 Antoine TRAN TAN
-# #
-# # Distributed under the Boost Software License, Version 1.0. (See accompanying
-# # file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
 
-# /build
-# .DS_Store
-# .vscode
-# .vs
+*~
+*.autosave
+*.a
+*.core
+*.moc
+*.o
+*.obj
+*.orig
+*.rej
+*.so
+*.so.*
+*_pch.h.cpp
+*_resource.rc
+*.qm
+.#*
+*.*#
+core
+!core/
+tags
+.DS_Store
+.directory
+*.debug
+Makefile*
+*.prl
+*.app
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+Thumbs.db
+*.res
+*.rc
+/.qmake.cache
+/.qmake.stash
 
-# # Prerequisites
-# *.d
+# qtcreator generated files
+*.pro.user*
 
-# # Compiled Object files
-# *.slo
-# *.lo
-# *.o
-# *.obj
+# xemacs temporary files
+*.flc
 
-# # Precompiled Headers
-# *.gch
-# *.pch
+# Vim temporary files
+.*.swp
 
-# # Compiled Dynamic libraries
-# *.so
-# *.dylib
-# *.dll
+# Visual Studio generated files
+*.ib_pdb_index
+*.idb
+*.ilk
+*.pdb
+*.sln
+*.suo
+*.vcproj
+*vcproj.*.*.user
+*.ncb
+*.sdf
+*.opensdf
+*.vcxproj
+*vcxproj.*
 
-# # Fortran module files
-# *.mod
-# *.smod
+# MinGW generated files
+*.Debug
+*.Release
 
-# # Compiled Static libraries
-# *.lai
-# *.la
-# *.a
-# *.lib
+# Python byte code
+*.pyc
 
-# # Executables
-# *.exe
-# *.out
-# *.app
+# Binaries
+# --------
+*.dll
+*.exe
+
+# Build folder
+build
+install
+CMakeLists.txt.user
+
+# vscode folder
+.vscode
