--- a/.vscode/settings_template.json
+++ b/.vscode/settings_template.json
@@ -9,5 +9,6 @@
     "cmake.configureEnvironment": {
         "CMAKE_PREFIX_PATH": "OPENCV_CMAKE_DIR;QT_CMAKE_DIR"
     },
-    "C_Cpp.default.browse.databaseFilename": "${workspaceFolder}/.vscode/.BROWSE.VC.DB"
+    "C_Cpp.default.browse.databaseFilename": "${workspaceFolder}/.vscode/.BROWSE.VC.DB",
+    "cmake.options.statusBarVisibility": "visible"
 }
